# windsurf_cascades

./: .gitignore  README.md
api_integration/: api_client.py  api_integration.md  api_requests.sh  instructions.md  main.py  yt_demo_api_int.md
blogdata/: cc_part3.txt  cc_part4.txt  cc_part5.txt  command_center_part1.txt  command_center_part2.txt  tagdata.txt
demo_code/: calculator_logic.py  calculator_ui.py  features_calculator.md  geometric_calculator.py  geometric_ui.py  main.py  test_calculator_logic.py  test_geometric_calculator.py
docs/: index.html
electronjs_app/: index.html  instructions.md  main.js  renderer.js  styles.css  terminal.html  terminal.js
extracting_yaml_data/: agent_yamls.txt  other_yamls.txt  project_overview.md  requirements.txt  tasks_yamls.txt  yaml_extraction_20241130_161558.txt
fastapi_oauth_composio/: api_key_client.py  custom_tool_integration_start.py  fastapi_auth.yaml  fastapi_server.yaml  instructions.md  json_yaml_conversion.py  notion_sample.yaml  requirements.txt  sales_client.py  test_client.py
general/: SOLID_principles.md  ai_ide_landscape.md  ai_ide_mindmap.md  business_tasks_mindmap.excalidraw  business_user_guide.md  chocolate_cupcake_recipe.md  ecommerce_dashboard.md  executive_ai_ide_pitch.md  extended_business_tasks.md  windsurf_cascade_tech.md
letta_agents_grpc/: __init__.py  (+12 more)
wasm_calculator/wasm-calculator/: Cargo.toml
wasm_calculator/wasm-calculator/src/: calculator.rs  lib.rs
wasm_calculator/wasm-calculator/www/: index.html  index.js  server.py  webpack.config.js
wasm_calculator/wasm-calculator/www/pkg/: index_bg.wasm  wasm_calculator_bg.js  wasm_calculator_bg.wasm
(+84 files in other folders)
