[package]
name = "wasm-calculator"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly-based calculator application"
repository = "https://github.com/yourusername/wasm-calculator"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-test = "0.3.34"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true
